# youtube-semantic-search

./: .gitignore  Makefile  README.md  config.yaml  data.dvc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.dvc/: config
.github/workflows/: etl_pipeline.yaml
docker/: Dockerfile  requirements.txt
docker/app/: main.py  utils.py
notebooks/: youtube-semantic-search.ipynb
src/: app.py  config.py  embeddings.py  etl.py  frontend.py  ingest.py  logger.py  paths.py  semantic_search.py  utils.py
