[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["ncheymbamalu <nchey.learnings@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
adbc-driver-manager = "^1.1.0"
adbc-driver-postgresql = "^1.1.0"
fastapi = "0.112.1"
gradio = "4.36.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
joblib = "^1.4.2"
jupyter = "^1.0.0"
nbformat = "5.10.4"
numpy = "1.26.4"
omegaconf = "2.3.0"
pandas = "2.1.4"
plotly = "5.23.0"
polars = "1.3.0"
psycopg2-binary = "^2.9.9"
pyarrow = "17.0.0"
pydantic = "2.8.2"
python-dotenv = "1.0.1"
pytube = "15.0.0"
requests = "2.32.3"
scikit-learn = "1.3.2"
sentence-transformers = "3.0.1"
sqlalchemy = "^2.0.32"
sqlite-vec = "^0.1.1"
torch = "^2.4.0"
torchvision = "^0.19.0"
tqdm = "4.66.5"
uvicorn = "0.30.6"
watchdog = "4.0.2"
youtube-transcript-api = "0.6.2"

[tool.poetry.group.dev.dependencies]
black = "24.8.0"
Flake8-pyproject = "1.2.3"
isort = "5.13.2"
mypy = "1.11.1"
pylint = "3.2.6"
pytest = "8.3.2"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
import-order-style = ["pep8"]
application_import_names = ["src"]
exclude = [".git", "__pycache__"]
extend-ignore = ["E501", "W503", "W504", "E203", "I201", "I202"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
indent = 4
lines_between_types = 1
known_first_party = ["src"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
ignore_missing_imports = true
install_types = true
non_interactive = true
follow_imports = "silent"
no_strict_optional = true
warn_redundant_casts = false
warn_unused_ignores = true
warn_unused_configs = true
warn_return_any = true
warn_no_return = true
warn_incomplete_stub = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
strict_optional = true
verbosity = 0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
